[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "openmemo-openclaw"
version = "0.1.0"
description = "OpenMemo Cognitive Memory Adapter for OpenClaw Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "OpenMemo", email = "hello@openmemo.ai" },
]
keywords = ["openmemo", "openclaw", "agent", "memory", "cognitive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openmemo>=0.4.0",
    "requests>=2.28",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/openmemoai/openmemo-openclaw-adapter"
Documentation = "https://openmemo.ai"
Repository = "https://github.com/openmemoai/openmemo-openclaw-adapter"
