[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmemo-openclaw"
version = "0.1.1"
description = "OpenMemo Cognitive Memory Adapter for OpenClaw Agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    { name = "OpenMemo", email = "hello@openmemo.ai" },
]
keywords = ["openmemo", "openclaw", "agent", "memory", "cognitive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openmemo>=0.4.0",
    "requests>=2.28",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/openmemoai/openmemo-openclaw-adapter"
Documentation = "https://openmemo.ai"
Repository = "https://github.com/openmemoai/openmemo-openclaw-adapter"
